# 3d-scanning-and-motion-capture

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.openpose  README.md  requirements.txt
build_gpu/: CMakeCache.txt  Makefile  cmake_install.cmake  extract_keypoints  pipeline
data/: keypoints_TS5.json  keypoints_TS6.json
include/: CameraModel.h  FittingOptimizer.h  PoseDetector.h  SMPLMeshIO.h  SMPLModel.h  SMPLOptimizer.h  SMPLOptimizerCosts.h  TemporalSmoother.h  VideoLoader.h  Visualization.h
output_debug/: pipeline_debug.json
scripts/: mpi_inf_3dhp_eval.py  preprocess.py  render.py  smpl.py
src/: FittingOptimizer.cpp  PoseDetector.cpp  SMPLMeshIO.cpp  SMPLModel.cpp  SMPLOptimizer.cpp  TemporalSmoother.cpp  VideoLoader.cpp  Visualization.cpp  main.cpp
tools/: extract_keypoints.cpp
